Work on basic library
- implemented envirorment as a templated class
- template parameters compile time check
- implemented a simple test class for finite MDPs (to refactor with matrix library)

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -39,7 +39,7 @@ message(STATUS "Build type       : " ${BUILD_TYPE_MSG})
 
 # ------------------------ BUILD -------------------------------
 
-
+add_library(rele src/FiniteMDP.cpp)
 
 
 # ------------------------ INSTALLATION ------------------------
