Work on core and SARSA
- work on core, sarasa
- sarsa still not working

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -20,6 +20,7 @@ include_directories(include/core
 # ----------------------- LIBRARIES ---------------------------
 
 find_package(Boost 1.46 REQUIRED COMPONENTS random)
+find_package(Armadillo REQUIRED)
   
 
 # ----------------------- GCC FLAGS ----------------------------
