--- a/rele_ros/CMakeLists.txt
+++ b/rele_ros/CMakeLists.txt
@@ -1,15 +1,20 @@
 cmake_minimum_required(VERSION 2.8.3)
 
 
-find_package(catkin REQUIRED COMPONENTS rele roscpp vrep_common)
+find_package(catkin REQUIRED COMPONENTS rele 
+                                        roscpp 
+                                        vrep_common)
 project(rele_ros)
 
-catkin_package()
+catkin_package(INCLUDE_DIRS include/rele_ros
+               LIBRARIES releROS)
 
 
 # ----------------------- INCLUDES ----------------------------
 
-include_directories(include/rele_ros ${catkin_INCLUDE_DIRS})
+include_directories(include/rele_ros/core
+                    include/rele_ros/envirorments
+                    ${catkin_INCLUDE_DIRS})
 
 # ----------------------- LIBRARIES ---------------------------
 
@@ -34,10 +39,23 @@ message(STATUS "Build type       : " ${BUILD_TYPE_MSG})
 
 # ------------------------ BUILD -------------------------------
 
-add_executable(basketbot src/simulator_handlers/basketbot_sim.cpp)
+#releROS library
+file(GLOB_RECURSE ReLeROS_SOURCE 
+                  src/envirorments/*.cpp)
+                  
+add_library(releROS ${ReLeROS_SOURCE})
+target_link_libraries(releROS ${catkin_LIBRARIES})
+add_dependencies(releROS ${catkin_EXPORTED_TARGETS})
 
-target_link_libraries(basketbot ${catkin_LIBRARIES})
 
+#simulator handlers
+add_executable(basketbot_sim src/simulator_handlers/basketbot_sim.cpp)
+target_link_libraries(basketbot_sim ${catkin_LIBRARIES})
+add_dependencies(basketbot_sim ${catkin_EXPORTED_TARGETS})
+
+#Test nodes
+add_executable(basketbot src/test/BasketBotTest.cpp)
+target_link_libraries(basketbot releROS ${catkin_LIBRARIES})
 add_dependencies(basketbot ${catkin_EXPORTED_TARGETS})
 
 
