Updated with new domains and ODE45

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -100,8 +100,8 @@ target_link_libraries(grid_world rele)
 add_executable(mountain_car src/test/MountainCarTest.cpp)
 target_link_libraries(mountain_car rele)
 
-add_executable(lqr_pgpe src/test/LqrPGPETest.cpp)
-target_link_libraries(lqr_pgpe rele)
+add_executable(lqr_PGPE src/test/LqrPGPETest.cpp)
+target_link_libraries(lqr_PGPE rele)
 
 add_executable(lqr_REPS src/test/LqrEpisodicREPSTest.cpp)
 target_link_libraries(lqr_REPS rele)
