Added Underwater Vehicle domain (added odeint dependence)

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -46,7 +46,15 @@ if(WIN32)
 	#include_directories("C:/usr/include")
 else()
 	find_package(Armadillo REQUIRED)
-	find_package(NLopt REQUIRED)
+        find_package(NLopt REQUIRED)
+        #Boost.Numeric.odeint used for integration (odeint)
+        set(Boost_USE_STATIC_LIBS        OFF)
+        set(Boost_USE_MULTITHREADED      ON)
+        set(Boost_USE_STATIC_RUNTIME    OFF)
+        find_package(Boost 1.53 REQUIRED)
+        if(Boost_FOUND)
+                include_directories(${Boost_INCLUDE_DIRS})
+        endif()
 endif()
 include_directories(${ARMADILLO_INCLUDE_DIR})
 
@@ -88,7 +96,8 @@ if(WIN32)
 	target_link_libraries(rele -L"C:/usr/bin" -L"C:/usr/lib" -larmadillo -lnlopt -lgfortran)
 else()
 	target_link_libraries(rele ${ARMADILLO_LIBRARIES}
-        	                   ${NLOPT_LIBRARY})
+                                   ${NLOPT_LIBRARY}
+                                   ${Boost_LIBRARIES})
 endif()
 
 add_executable(simple_chain src/test/SimpleChain.cpp)
