Updated: - added NLS test for PGPE and REPS - added getParametersSize() method in ParametricRegressor - defined NES has subclass of PGPE

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -121,6 +121,12 @@ target_link_libraries(lqr_REPS rele)
 add_executable(rocky_REPS src/test/RockyTest.cpp)
 target_link_libraries(rocky_REPS rele)
 
+add_executable(nls_PGPE src/test/NlsPGPETest.cpp)
+target_link_libraries(nls_PGPE rele)
+
+add_executable(nls_REPS src/test/NlsEpisodicREPSTest.cpp)
+target_link_libraries(nls_REPS rele)
+
 # ------------------------ INSTALLATION ------------------------
 
 if(catkin_FOUND)
