Updated  - added xNES (must be verified)  - added Cholesky Normal distribution with exact fisher computation

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -115,6 +115,9 @@ target_link_libraries(lqr_PGPE rele)
 add_executable(lqr_NES src/test/LqrNESTest.cpp)
 target_link_libraries(lqr_NES rele)
 
+add_executable(lqr_xNES src/test/LqrxNESTest.cpp)
+target_link_libraries(lqr_xNES rele)
+
 add_executable(lqr_REPS src/test/LqrEpisodicREPSTest.cpp)
 target_link_libraries(lqr_REPS rele)
 
