--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -135,6 +135,9 @@ target_link_libraries(basisMatrixTest rele)
 
 add_executable(nls_OptParams src/test/NlsOptimalParamsTest.cpp)
 target_link_libraries(nls_OptParams rele)
+
+add_executable(deep_NES src/test/DeepNESTest.cpp)
+target_link_libraries(deep_NES rele)
 # ------------------------ INSTALLATION ------------------------
 
 if(catkin_FOUND)
