--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -143,6 +143,9 @@ target_link_libraries(deep_BBO rele)
 
 add_executable(chol_FIM src/test/CholeskyFIMTest.cpp)
 target_link_libraries(chol_FIM rele)
+
+add_executable(dist2mat src/test/Distribution2MatlabTest.cpp)
+target_link_libraries(dist2mat rele)
 # ------------------------ INSTALLATION ------------------------
 
 if(catkin_FOUND)
