--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -111,14 +111,8 @@ target_link_libraries(grid_world rele)
 add_executable(mountain_car src/test/MountainCarTest.cpp)
 target_link_libraries(mountain_car rele)
 
-add_executable(lqr_PGPE src/test/LqrPGPETest.cpp)
-target_link_libraries(lqr_PGPE rele)
-
-add_executable(lqr_NES src/test/LqrNESTest.cpp)
-target_link_libraries(lqr_NES rele)
-
-add_executable(lqr_xNES src/test/LqrxNESTest.cpp)
-target_link_libraries(lqr_xNES rele)
+add_executable(lqr_BBO src/test/LqrBBOTest.cpp)
+target_link_libraries(lqr_BBO rele)
 
 add_executable(lqr_REPS src/test/LqrREPSTest.cpp)
 target_link_libraries(lqr_REPS rele)
