Moved dynamic programming in solvers folder

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -15,7 +15,6 @@ if(catkin_FOUND)
                                 include/rele/approximators
                                 include/rele/statistics
                                 include/rele/IRL
-                                include/rele/dynamic_programming
                                 include/rele/solvers
 	               LIBRARIES rele)
 	set(CATKIN_MSG TRUE)
@@ -38,7 +37,6 @@ include_directories(include/rele/core
                     include/rele/approximators
                     include/rele/statistics
                     include/rele/IRL
-                    include/rele/dynamic_programming
                     include/rele/solvers)
 
 # ----------------------- LIBRARIES ---------------------------
@@ -105,8 +103,7 @@ file(GLOB_RECURSE ReLe_SOURCE
                   src/generators/*.cpp
                   src/approximators/*.cpp
                   src/statistics/*.cpp
-                  src/solvers/*.cpp
-                  src/dynamic_programming/*.cpp)
+                  src/solvers/*.cpp)
 
 file(GLOB_RECURSE ReLe_INCLUDE
                   include/*.h)
@@ -197,13 +194,14 @@ target_link_libraries(lqr_MWAL rele)
 add_executable(simple_chain_MWAL src/test/IRL/SimpleChainMWAL.cpp)
 target_link_libraries(simple_chain_MWAL rele)
 
-#DP tests
-add_executable(dynamic_programming_test src/test/dynamic_programming/DynamicProgrammingTest.cpp)
-target_link_libraries(dynamic_programming_test rele)
-
 #Solvers tests
 add_executable(lqr_solver_test src/test/solvers/LQRsolverTest.cpp)
 target_link_libraries(lqr_solver_test rele)
+
+add_executable(dynamic_programming_test src/test/solvers/dynamic_programming/DynamicProgrammingTest.cpp)
+target_link_libraries(dynamic_programming_test rele)
+
+
 
 
 # ------------------------ INSTALLATION ------------------------
